Fix exception for non-existing keys

--- a/common/src/test/resources/i18n/default_de_DE.properties
+++ b/common/src/test/resources/i18n/default_de_DE.properties
@@ -3,3 +3,4 @@ key.with.double.nested=double-key from de_DE %{key.with.nested}
 key.with.nested=key from de_DE %{nested.key}
 key.with.variable=key from de_DE ${variable}
 nested.key=nested-key-de_DE
+key.with.nonexistent.nested=key from de_DE %{non-existing}
