--- a/common/src/test/resources/i18n/default_en_US.properties
+++ b/common/src/test/resources/i18n/default_en_US.properties
@@ -3,3 +3,4 @@ key.with.double.nested=double-key from en_US %{key.with.nested}
 key.with.nested=key from en_US %{nested.key}
 key.with.variable=key from en_US ${variable}
 nested.key=nested-key-en_US
+key.with.nonexistent.nested=key from en_US %{non-existing}
