Add Test for circular keys

--- a/common/src/test/resources/i18n/default.properties
+++ b/common/src/test/resources/i18n/default.properties
@@ -5,3 +5,5 @@ key.with.variable=key from main ${variable}
 nested.key=nested-key
 key.with.nonexistent.nested=key from main %{non-existing}
 key.only.in.main=key in main
+circular.key=%{circular.key2}
+circular.key2=%{circular.key}
