--- a/common/src/test/resources/i18n/default.properties
+++ b/common/src/test/resources/i18n/default.properties
@@ -1,9 +1,11 @@
 key=key from main
 key.with.double.nested=double-key from main %{key.with.nested}
 key.with.nested=key from main %{nested.key}
+key.with.multiple.nested=%{nested.key} %{key}
 key.with.variable=key from main ${variable}
 nested.key=nested-key
 key.with.nonexistent.nested=key from main %{non-existing}
 key.only.in.main=key in main
 circular.key=circular1 %{circular.key2}
 circular.key2=circular2 %{circular.key}
+key.without.circular=circular3 %{key} %{key}
