Improve test coverage

--- a/common/src/test/resources/i18n/default.properties
+++ b/common/src/test/resources/i18n/default.properties
@@ -9,3 +9,4 @@ key.only.in.main=key in main
 circular.key=circular1 %{circular.key2}
 circular.key2=circular2 %{circular.key}
 key.without.circular=circular3 %{key} %{key}
+without.closing.string.bracket=Bla %{not.closed
