Update JDA to 5.0.0-beta.1

--- a/tjda/src/test/resources/i18n/discordLocale_fr.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_fr.properties
@@ -2,5 +2,5 @@ test.name=name-fr
 test.description=description-fr
 test.test-sub.name=sub-name-fr
 test.test-sub.description=sub-description-fr
-test.test-sub.test-sub-arg.name=arg-name-fr
-test.test-sub.test-sub-arg.description=arg-description-fr
+test.test-sub.options.test-sub-arg.name=arg-name-fr
+test.test-sub.options.test-sub-arg.description=arg-description-fr
