--- a/tjda/src/test/resources/i18n/discordLocale_hi.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_hi.properties
@@ -2,5 +2,5 @@ test.name=name-hi
 test.description=description-hi
 test.test-sub.name=sub-name-hi
 test.test-sub.description=sub-description-hi
-test.test-sub.test-sub-arg.name=arg-name-hi
-test.test-sub.test-sub-arg.description=arg-description-hi
+test.test-sub.options.test-sub-arg.name=arg-name-hi
+test.test-sub.options.test-sub-arg.description=arg-description-hi
