--- a/tjda/src/test/resources/i18n/discordLocale_ja.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_ja.properties
@@ -2,5 +2,5 @@ test.name=name-ja
 test.description=description-ja
 test.test-sub.name=sub-name-ja
 test.test-sub.description=sub-description-ja
-test.test-sub.test-sub-arg.name=arg-name-ja
-test.test-sub.test-sub-arg.description=arg-description-ja
+test.test-sub.options.test-sub-arg.name=arg-name-ja
+test.test-sub.options.test-sub-arg.description=arg-description-ja
