--- a/tjda/src/test/resources/i18n/discordLocale_no.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_no.properties
@@ -2,5 +2,5 @@ test.name=name-no
 test.description=description-no
 test.test-sub.name=sub-name-no
 test.test-sub.description=sub-description-no
-test.test-sub.test-sub-arg.name=arg-name-no
-test.test-sub.test-sub-arg.description=arg-description-no
+test.test-sub.options.test-sub-arg.name=arg-name-no
+test.test-sub.options.test-sub-arg.description=arg-description-no
