--- a/tjda/src/test/resources/i18n/discordLocale_pt_BR.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_pt_BR.properties
@@ -2,5 +2,5 @@ test.name=name-pt-br
 test.description=description-pt-br
 test.test-sub.name=sub-name-pt-br
 test.test-sub.description=sub-description-pt-br
-test.test-sub.test-sub-arg.name=arg-name-pt-br
-test.test-sub.test-sub-arg.description=arg-description-pt-br
+test.test-sub.options.test-sub-arg.name=arg-name-pt-br
+test.test-sub.options.test-sub-arg.description=arg-description-pt-br
