--- a/tjda/src/test/resources/i18n/discordLocale_ru.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_ru.properties
@@ -2,5 +2,5 @@ test.name=name-ru
 test.description=description-ru
 test.test-sub.name=sub-name-ru
 test.test-sub.description=sub-description-ru
-test.test-sub.test-sub-arg.name=arg-name-ru
-test.test-sub.test-sub-arg.description=arg-description-ru
+test.test-sub.options.test-sub-arg.name=arg-name-ru
+test.test-sub.options.test-sub-arg.description=arg-description-ru
