--- a/tjda/src/test/resources/i18n/discordLocale_sv_SE.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_sv_SE.properties
@@ -2,5 +2,5 @@ test.name=name-sv-se
 test.description=description-sv-se
 test.test-sub.name=sub-name-sv-se
 test.test-sub.description=sub-description-sv-se
-test.test-sub.test-sub-arg.name=arg-name-sv-se
-test.test-sub.test-sub-arg.description=arg-description-sv-se
+test.test-sub.options.test-sub-arg.name=arg-name-sv-se
+test.test-sub.options.test-sub-arg.description=arg-description-sv-se
