--- a/tjda/src/test/resources/i18n/discordLocale_uk.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_uk.properties
@@ -2,5 +2,5 @@ test.name=name-uk
 test.description=description-uk
 test.test-sub.name=sub-name-uk
 test.test-sub.description=sub-description-uk
-test.test-sub.test-sub-arg.name=arg-name-uk
-test.test-sub.test-sub-arg.description=arg-description-uk
+test.test-sub.options.test-sub-arg.name=arg-name-uk
+test.test-sub.options.test-sub-arg.description=arg-description-uk
