--- a/tjda/src/test/resources/i18n/discordLocale_vi.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_vi.properties
@@ -2,5 +2,5 @@ test.name=name-vi
 test.description=description-vi
 test.test-sub.name=sub-name-vi
 test.test-sub.description=sub-description-vi
-test.test-sub.test-sub-arg.name=arg-name-vi
-test.test-sub.test-sub-arg.description=arg-description-vi
+test.test-sub.options.test-sub-arg.name=arg-name-vi
+test.test-sub.options.test-sub-arg.description=arg-description-vi
