--- a/tjda/src/test/resources/i18n/discordLocale_zh_CN.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_zh_CN.properties
@@ -2,5 +2,5 @@ test.name=name-zh-cn
 test.description=description-zh-cn
 test.test-sub.name=sub-name-zh-cn
 test.test-sub.description=sub-description-zh-cn
-test.test-sub.test-sub-arg.name=arg-name-zh-cn
-test.test-sub.test-sub-arg.description=arg-description-zh-cn
+test.test-sub.options.test-sub-arg.name=arg-name-zh-cn
+test.test-sub.options.test-sub-arg.description=arg-description-zh-cn
