--- a/tjda/src/test/resources/i18n/discordLocale.properties
+++ b/tjda/src/test/resources/i18n/discordLocale.properties
@@ -2,5 +2,5 @@ test.name=name-root
 test.description=description-root
 test.test-sub.name=sub-name-root
 test.test-sub.description=sub-description-root
-test.test-sub.test-sub-arg.name=arg-name-root
-test.test-sub.test-sub-arg.description=arg-description-root
+test.test-sub.options.test-sub-arg.name=arg-name-root
+test.test-sub.options.test-sub-arg.description=arg-description-root
