--- a/tjda/src/test/resources/i18n/discordLocale_cs.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_cs.properties
@@ -2,5 +2,5 @@ test.name=name-cs
 test.description=description-cs
 test.test-sub.name=sub-name-cs
 test.test-sub.description=sub-description-cs
-test.test-sub.test-sub-arg.name=arg-name-cs
-test.test-sub.test-sub-arg.description=arg-description-cs
+test.test-sub.options.test-sub-arg.name=arg-name-cs
+test.test-sub.options.test-sub-arg.description=arg-description-cs
