--- a/tjda/src/test/resources/i18n/discordLocale_da.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_da.properties
@@ -2,5 +2,5 @@ test.name=name-da
 test.description=description-da
 test.test-sub.name=sub-name-da
 test.test-sub.description=sub-description-da
-test.test-sub.test-sub-arg.name=arg-name-da
-test.test-sub.test-sub-arg.description=arg-description-da
+test.test-sub.options.test-sub-arg.name=arg-name-da
+test.test-sub.options.test-sub-arg.description=arg-description-da
