--- a/tjda/src/test/resources/i18n/discordLocale_de.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_de.properties
@@ -2,5 +2,5 @@ test.name=name-de
 test.description=description-de
 test.test-sub.name=sub-name-de
 test.test-sub.description=sub-description-de
-test.test-sub.test-sub-arg.name=arg-name-de
-test.test-sub.test-sub-arg.description=arg-description-de
+test.test-sub.options.test-sub-arg.name=arg-name-de
+test.test-sub.options.test-sub-arg.description=arg-description-de
