--- a/tjda/src/test/resources/i18n/discordLocale_el.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_el.properties
@@ -2,5 +2,5 @@ test.name=name-el
 test.description=description-el
 test.test-sub.name=sub-name-el
 test.test-sub.description=sub-description-el
-test.test-sub.test-sub-arg.name=arg-name-el
-test.test-sub.test-sub-arg.description=arg-description-el
+test.test-sub.options.test-sub-arg.name=arg-name-el
+test.test-sub.options.test-sub-arg.description=arg-description-el
