--- a/tjda/src/test/resources/i18n/discordLocale_en_GB.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_en_GB.properties
@@ -2,5 +2,5 @@ test.name=name-en-gb
 test.description=description-en-gb
 test.test-sub.name=sub-name-en-gb
 test.test-sub.description=sub-description-en-gb
-test.test-sub.test-sub-arg.name=arg-name-en-gb
-test.test-sub.test-sub-arg.description=arg-description-en-gb
+test.test-sub.options.test-sub-arg.name=arg-name-en-gb
+test.test-sub.options.test-sub-arg.description=arg-description-en-gb
