--- a/tjda/src/test/resources/i18n/discordLocale_hr.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_hr.properties
@@ -2,5 +2,5 @@ test.name=name-hr
 test.description=description-hr
 test.test-sub.name=sub-name-hr
 test.test-sub.description=sub-description-hr
-test.test-sub.test-sub-arg.name=arg-name-hr
-test.test-sub.test-sub-arg.description=arg-description-hr
+test.test-sub.options.test-sub-arg.name=arg-name-hr
+test.test-sub.options.test-sub-arg.description=arg-description-hr
