--- a/tjda/src/test/resources/i18n/discordLocale_hu.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_hu.properties
@@ -2,5 +2,5 @@ test.name=name-hu
 test.description=description-hu
 test.test-sub.name=sub-name-hu
 test.test-sub.description=sub-description-hu
-test.test-sub.test-sub-arg.name=arg-name-hu
-test.test-sub.test-sub-arg.description=arg-description-hu
+test.test-sub.options.test-sub-arg.name=arg-name-hu
+test.test-sub.options.test-sub-arg.description=arg-description-hu
