--- a/tjda/src/test/resources/i18n/discordLocale_it.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_it.properties
@@ -2,5 +2,5 @@ test.name=name-it
 test.description=description-it
 test.test-sub.name=sub-name-it
 test.test-sub.description=sub-description-it
-test.test-sub.test-sub-arg.name=arg-name-it
-test.test-sub.test-sub-arg.description=arg-description-it
+test.test-sub.options.test-sub-arg.name=arg-name-it
+test.test-sub.options.test-sub-arg.description=arg-description-it
