--- a/tjda/src/test/resources/i18n/discordLocale_ko.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_ko.properties
@@ -2,5 +2,5 @@ test.name=name-ko
 test.description=description-ko
 test.test-sub.name=sub-name-ko
 test.test-sub.description=sub-description-ko
-test.test-sub.test-sub-arg.name=arg-name-ko
-test.test-sub.test-sub-arg.description=arg-description-ko
+test.test-sub.options.test-sub-arg.name=arg-name-ko
+test.test-sub.options.test-sub-arg.description=arg-description-ko
