--- a/tjda/src/test/resources/i18n/discordLocale_lt.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_lt.properties
@@ -2,5 +2,5 @@ test.name=name-lt
 test.description=description-lt
 test.test-sub.name=sub-name-lt
 test.test-sub.description=sub-description-lt
-test.test-sub.test-sub-arg.name=arg-name-lt
-test.test-sub.test-sub-arg.description=arg-description-lt
+test.test-sub.options.test-sub-arg.name=arg-name-lt
+test.test-sub.options.test-sub-arg.description=arg-description-lt
