--- a/tjda/src/test/resources/i18n/discordLocale_th.properties
+++ b/tjda/src/test/resources/i18n/discordLocale_th.properties
@@ -2,5 +2,5 @@ test.name=name-th
 test.description=description-th
 test.test-sub.name=sub-name-th
 test.test-sub.description=sub-description-th
-test.test-sub.test-sub-arg.name=arg-name-th
-test.test-sub.test-sub-arg.description=arg-description-th
+test.test-sub.options.test-sub-arg.name=arg-name-th
+test.test-sub.options.test-sub-arg.description=arg-description-th
